test/fixtures/typecheck/fail/BadAnnotation.lam
module BadAnnotation

type Bool = True | False

foo : Bool
foo = []
